--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --config webpack.development.config.js --port 8080 --progress --colors",
-    "build": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
+    "build": "npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
     "lint": "eslint **/*.js --fix && eslint **/*.jsx --fix",
     "preinstall": "npm install -g karma-cli",
     "test": "karma start config/karma.conf.js --single-run",
@@ -54,7 +54,6 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "cross-env": "5.1.1",
     "css-loader": "0.28.7",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
