--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "1.1.0",
     "babel-polyfill": "6.26.0",
     "body-parser": "1.18.2",
+    "cors": "2.8.5",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "es6-promise": "4.1.1",
