--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 
 # production
-/dist
-
-# mvn builds
-**/target
-*.iml
+/build
 
 # misc
 .DS_Store
@@ -18,6 +19,12 @@
 .env.production.local
 
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# mvn builds
+**/target
+*.iml
 
 *.jar
 /.vscode/
