--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "karma start config/karma.conf.js --single-run",
-    "test:local": "karma start config/karma.conf.js"
+    "test": "node scripts/test.js"
   },
   "dependencies": {
     "@babel/core": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "@svgr/webpack": "4.1.0",
@@ -18,11 +18,14 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "0.3.2",
+    "babel-polyfill": "6.26.0",
     "babel-preset-react-app": "8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb-standard": "3.0.1",
     "eslint-config-react-app": "4.0.0",
@@ -45,8 +48,12 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "1.1.0",
     "isomorphic-fetch": "2.2.1",
+    "jest": "^24.7.1",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -59,7 +66,7 @@
     "react-app-polyfill": "1.0.0",
     "react-dev-utils": "9.0.0",
     "react-dom": "16.8.6",
-    "react-i18next": "^10.9.0",
+    "react-i18next": "10.9.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
@@ -70,7 +77,7 @@
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
-    "styled-components": "^4.2.0",
+    "styled-components": "4.2.0",
     "terser-webpack-plugin": "1.2.3",
     "typescript": "3.4.5",
     "url-loader": "1.1.2",
@@ -79,6 +86,9 @@
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0",
     "workbox-webpack-plugin": "4.2.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -90,6 +100,53 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"      
+    ],    
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
     ]
   },
   "babel": {
