--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "test:local": "npm run test -- --watchAll",
+    "test:ci": "set CI=true && npm test"
   },
   "dependencies": {
     "@babel/core": "7.4.3",
