--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-adapter-react-16": "1.12.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb-standard": "3.0.1",
     "eslint-config-react-app": "4.0.0",
@@ -50,12 +50,12 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "1.1.0",
     "isomorphic-fetch": "2.2.1",
-    "jest": "^24.7.1",
-    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "4.11.0",
+    "node-sass": "4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -110,8 +110,8 @@
       "!src/**/*.d.ts"
     ],
     "setupFiles": [
-      "react-app-polyfill/jsdom"      
-    ],    
+      "react-app-polyfill/jsdom"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.js"
     ],
@@ -155,6 +155,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "proxy": "http://localhost:3000"
+  }
 }
